SED-2992 allow-to-duplicate-analytics-dashboards (#264)
* SED-2992 Allow to duplicate analytics dashboards

* SED-2992 Updating model